--- a/src/Screen/Playground/style.scss
+++ b/src/Screen/Playground/style.scss
@@ -139,6 +139,8 @@
   width: 100%;
   position: relative;
   z-index: 3;
+  display: flex;
+  align-items: flex-end;
 }
 
 .playgroundFooterBarContainer {
