--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,9 @@ button {
   padding: 0;
 }
 
-input {
+input, textarea {
   outline: none;
   border: none;
   background: transparent;
+  font-family: inherit;
 }
